🤡 fix bugs